@@ -1370,6 +1370,8 @@ C-API
 Extension Modules
 -----------------
 
+- Issue #7078: Set struct.__doc__ from _struct.__doc__.
+
 - Issue #3366: Add gamma function to math module.
 
 - Issue #6823: Allow time.strftime() to accept a tuple with a isdst field
